tests/type_errors/list_field_access_invalid.nos
# expect_error: no field name
# List types don't have arbitrary named fields
main() = [1, 2, 3].name
